# hector_moveit_perception_plugins

./: CMakeLists.txt  README.md  package.xml
pointcloud_octomap_updater/: CMakeLists.txt
pointcloud_octomap_updater/include/moveit/pointcloud_octomap_updater/: pointcloud_octomap_updater.h
pointcloud_octomap_updater/src/: plugin_init.cpp  pointcloud_octomap_updater.cpp
prefiltered_pointcloud_octomap_updater/: CMakeLists.txt  README.md  package.xml  prefiltered_pointcloud_octomap_updater_plugin_description.xml
prefiltered_pointcloud_octomap_updater/include/moveit/prefiltered_pointcloud_octomap_updater/: prefiltered_pointcloud_octomap_updater.h
prefiltered_pointcloud_octomap_updater/src/: plugin_init.cpp  prefiltered_pointcloud_octomap_updater.cpp
